Finished sample documentation file
Finished sample documentation file

--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -17,38 +17,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Purpose:  \n",
-    "Loads environmental variables and the names of the tables we'd like to create/interact with (constants)\n",
-    "\n",
-    "Psuedocode:\n",
-    "- Set the name of the table that will hold the final aggregated data\n",
-    "- Load the name of the table that holds soil geometries\n",
-    "- Load the name of the table that holds the various components (different soils) per soil geometry\n",
-    "- Load the name of the table that holds the land composition details around each soil geometry\n",
-    "- Load the name of the table that holds the soil properties per province and soil code\n",
-    "- Load the name of the table that holds the agriculture\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "- Load the necessary environment variables from the .env file located in the docker folder"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TABLENAME = \"agg_soil_data\"\n",
+    "TABLENAME = \"agg_soil_data\"  # name of the table we are currently creating (will hold the aggregated data)\n",
+    "\n",
+    "# name of the table that holds soil geometries/borders\n",
     "SOIL_GEOM_TABLE = \"soil_geometry\"\n",
-    "SOIL_COMP_TABLE = \"soil_components\"\n",
-    "SOIL_SURRONDINGS_TABLE = \"soil_surronding_land\"\n",
-    "SOIL_DATA_TABLE = \"soil_data\"\n",
+    "\n",
+    "SOIL_COMP_TABLE = \"soil_components\"  # name of the table that holds the various soil components (different soils) per soil geometry\n",
+    "SOIL_SURRONDINGS_TABLE = \"soil_surronding_land\"  # name of the table that holds the land composition details around each soil geometry\n",
+    "SOIL_DATA_TABLE = \"soil_data\"  # name of the table that holds the soil properties per province and soil code\n",
+    "\n",
+    "# name of the table that holds the agriculture regions\n",
     "AG_REGIONS_TABLE = \"census_ag_regions\"\n",
     "\n",
+    "# Load the database connection environment variables located in the docker folder\n",
     "load_dotenv(\"../docker/.env\")\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
@@ -76,16 +62,16 @@
     "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "    conn = db.connect()\n",
     "\n",
-    "    # get data\n",
+    "    # get the soil data from each of their respective tables\n",
     "    soil_data = pullSoilData(conn)\n",
     "    surronding_soil = pullSurroundingSoil(conn)\n",
     "    soil_components = pullSoilComponents(conn)\n",
     "    soil_geometry = pullSoilGeometry(conn)\n",
     "\n",
-    "    # Merge data and aggregate them\n",
+    "    # Merge data and perform the aggregation per district (vairables remain constant over time)\n",
     "    merge_df = getMergedf(soil_data, surronding_soil, soil_components, soil_geometry)\n",
     "\n",
-    "    # Command to add to db\n",
+    "    # Add the resulting table to database, commit it then close the connection\n",
     "    merge_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"replace\", index=False)\n",
     "    conn.commit()\n",
     "    db.cleanup()"
@@ -99,13 +85,13 @@
     "Loads the soil property data per province and soil code from the soil data table ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_data))  \n",
     "\n",
     "Psuedocode:\n",
-    "- Creates the SQL query\n",
-    "- Use [pandas to load the data into the dataframe directly](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) (using the query and a database connection)\n",
-    "- Of the data loaded from the database, drop all irrelevant attributes. The attributes we are interested in keeping are provided as a list\n",
-    "- [Rename id to soil_id](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rename.html) (helps distinguish that it is not serial)\n",
+    "- Create the soil data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- Drop all irrelevant attributes (the attributes we are interested in keeping are provided as a list)\n",
+    "- [Rename id to soil_id](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rename.html)\n",
     "\n",
     "Note: \n",
-    "the inplace parameter makes it so that the dataframe itself is modified (as opposed to a copy). Therefore, the following two line are equivilant:\n",
+    "The inplace parameter makes it so that the dataframe itself is modified (as opposed to a copy). Therefore, the following two line are equivilant:\n",
     "1. soil_data.rename(columns={\"id\": \"soil_id\"}, inplace=True)    \n",
     "2. soil_data = soil_data.rename(columns={\"id\": \"soil_id\"})"
    ]
@@ -136,7 +122,7 @@
     "            \"water_reten_1500\",\n",
     "            \"bulk_density\",\n",
     "            \"elec_cond\",\n",
-    "            \"percnt_wood\"\n",
+    "            \"percnt_wood\",\n",
     "        ]\n",
     "    ]\n",
     "\n",
@@ -153,9 +139,9 @@
     "Loads the land composition details around each soil geometry from the soil surronding land table ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_surronding_land))  \n",
     "\n",
     "Psuedocode:\n",
-    "- Creates the SQL query\n",
-    "- Use [pandas to load the data into the dataframe directly](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) (using the query and a database connection)\n",
-    "- Of the data loaded from the database, drop all irrelevant attributes. The attributes we are interested in keeping are provided as a list"
+    "- Create the surronding soil SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- Drop all irrelevant attributes (the attributes we are interested in keeping are provided as a list)"
    ]
   },
   {
@@ -177,12 +163,12 @@
    "metadata": {},
    "source": [
     "Purpose:  \n",
-    "Loads the various components (different soils) per soil geometry from the soil components table ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_components))  \n",
+    "Loads the soil components (different soils) per soil geometry from the soil components table ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_components))  \n",
     "\n",
     "Psuedocode:\n",
-    "- Creates the SQL query\n",
-    "- Use [pandas to load the data into the dataframe directly](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) (using the query and a database connection)\n",
-    "- Of the data loaded from the database, drop all irrelevant attributes. The attributes we are interested in keeping are provided as a list"
+    "- Create the soil component SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- Drop all irrelevant attributes (the attributes we are interested in keeping are provided as a list)"
    ]
   },
   {
@@ -215,19 +201,24 @@
     "Loads the agriculture regions ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#census_ag_regions)) and then associates each soil geometry ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_geometry)) with their respective distirct\n",
     "\n",
     "Psuedocode:\n",
-    "- Create the regions SQL query\n",
-    "- Use [geopandas to load the data into a geodataframe directly](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.from_postgis.html) using the query, a database connection, a specified coordinate system (crs) and the column name with the boundaries/geometry\n",
+    "- Create the agriculture region SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.from_postgis.html)\n",
+    "    - **crs** specifies the coordinate system which in our case we are using EPSG:3347\n",
+    "    - **geom_col** speicifies the name of the columns we expect to find the geometry/borders within\n",
     "\n",
     "<br>\n",
     "\n",
     "- Create the soil geometry SQL query\n",
-    "- Use [geopandas to load the data into a geodataframe directly](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.from_postgis.html) using the query, a database connection, a specified coordinate system (crs) and the column name with the boundaries/geometry\n",
+    "- [Load the data from the database directly into a DataFrame](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.from_postgis.html)\n",
+    "    - **crs** specifies the coordinate system which in our case we are using EPSG:3347\n",
+    "    - **geom_col** speicifies the name of the columns we expect to find the geometry/borders within\n",
     "\n",
     "<br>\n",
     "\n",
-    "- Join the soil geometry geodataframe and the regions geodataframe based on which geometries fall into which regions (as per predicate: intersects) and all non intersecting points are deleted (as per how: inner)\n",
-    "- The join creates the column index_right which is not helpful, delete it as well as the geometry (since both are irrelevant)\n",
-    "- Convert the resulting geodataframe into a dataframe "
+    "- Join the soil geometry geodataframe and the regions geodataframe\n",
+    "    - **predicate=intersects** specifies that the regions should be joined *depending on which geometries fall into what regions*\n",
+    "    - **how=inner** specifies that all non intersecting points should be removed\n",
+    "- Delete index_right (created during the join) and geomtetry and return the results as a DataFrame (without geometry)"
    ]
   },
   {
@@ -252,8 +243,10 @@
     "    soil_geometry = gpd.sjoin(\n",
     "        soilRegions, agRegions, how=\"inner\", predicate=\"intersects\"\n",
     "    )\n",
-    "    soil_geometry.drop(columns=[\"geometry\", \"index_right\"], inplace=True)\n",
-    "    soil_geometry = pd.DataFrame(soil_geometry)\n",
+    "\n",
+    "    soil_geometry = pd.DataFrame(\n",
+    "        soil_geometry.drop(columns=[\"geometry\", \"index_right\"])\n",
+    "    )\n",
     "\n",
     "    return soil_geometry"
    ]
@@ -263,18 +256,24 @@
    "metadata": {},
    "source": [
     "Purpose:  \n",
-    "Combines all soil data into a single dataframe \n",
+    "Merges all soil DataFrames into one\n",
     "\n",
     "Psuedocode:\n",
-    "- Starting with the soil components, join the soil data on the soil_id and province, deleting any data on both sides if this combination does not exist (as per how: inner)\n",
-    "- With the resulting dataframe add the surronding data on the poly_id, deleting any data for which there is not match for\n",
-    "- With the resulting dataframe add the soil geometry on the poly_id, deleting any data fro which there is no match\n",
-    "- Since water_holding_cap is categorical, but still uses integers, we transform it into a numerical value \n",
+    "- Join soil components and soil data on soil_id and province\n",
+    "- Join the resulting DataFrame to surronding soil on poly_id\n",
+    "- Join the resulting dataframe to soil geometry on the poly_id\n",
+    "- Convert categorical data into numeric values (water_holding_cap uses numbers as classes, therefore we convert this to an integer)\n",
+    "\n",
+    "<br>\n",
+    "\n",
     "- Get a list of the columns, removing the names of the columns we will not want to scale by their percentage weights\n",
-    "- For each row, scale each column by the percentage amount\n",
-    "- Drop the now unnecessary columns\n",
-    "- aggregate all values by the mean\n",
-    "- rename the resulting columns"
+    "- Scale each column by the percentage amount that its corresponding component occupies (by row since their component percentage will vary)\n",
+    "- Drop columns used for preprocessing\n",
+    "- Aggregate the remaining columns by district returning their mean\n",
+    "- Name the columns into the final DataFrame\n",
+    "\n",
+    "Note:  \n",
+    "In each merge, any non intersecting data is deleted as per **how=inner**"
    ]
   },
   {
@@ -294,7 +293,7 @@
     "    merge_df = merge_df.merge(surronding_soil, on=\"poly_id\", how=\"inner\")\n",
     "    merge_df = merge_df.merge(soil_geometry, on=\"poly_id\", how=\"inner\")\n",
     "\n",
-    "    # Commands to change attributes which are object types\n",
+    "    # Commands to change attributes of type object into numeric values\n",
     "    merge_df[\"water_holding_cap\"] = pd.to_numeric(\n",
     "        merge_df[\"water_holding_cap\"], errors=\"coerce\"\n",
     "    )\n",
