--- a/src/Ergot/importErgot.ipynb
+++ b/src/Ergot/importErgot.ipynb
@@ -23,11 +23,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ErgotQueryBuilder import ErgotQueryBuilder\n",
+    "from ErgotQueryBuilder import ErgotQueryBuilder  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import os, sys, math\n",
     "import sqlalchemy as sq\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "\n",
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService"
