--- a/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
@@ -9,7 +9,7 @@
     "import os\n",
     "import xarray as xr\n",
     "import geopandas as gpd  # type: ignore\n",
-    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler\n",
+    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
     "import sys\n",
