--- a/src/SatelliteSoilMoisture/PullMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullMoistureData.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import xarray as xr\n",
+    "import xarray as xr  # type: ignore\n",
     "import geopandas as gpd  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
@@ -15,7 +15,7 @@
     "\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler\n",
+    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler  # type: ignore\n",
     "from Shared.DataService import DataService"
    ]
   },
