--- a/src/SatelliteSoilMoisture/soilMoistureAggregation.ipynb
+++ b/src/SatelliteSoilMoisture/soilMoistureAggregation.ipynb
@@ -10,7 +10,7 @@
     "import xarray as xr\n",
     "import geopandas as gpd  # type: ignore\n",
     "\n",
-    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler\n",
+    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
     "import sys\n",
