--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -32,7 +32,7 @@
     "# @title Import relevant modules\n",
     "import os\n",
     "import sys\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import geopandas as gpd  # type: ignore\n",
     "import sqlalchemy as sq\n",
     "import black\n",
