--- a/src/importSoil/soilVisualization.ipynb
+++ b/src/importSoil/soilVisualization.ipynb
@@ -10,7 +10,7 @@
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
     "import seaborn as sns  # type: ignore\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import os, sys\n",
     "\n",
