--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -9,7 +9,7 @@
     "from dotenv import load_dotenv\n",
     "import geopandas as gpd  # type: ignore\n",
     "import sqlalchemy as sq\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
