save before rebase

--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -72,7 +72,6 @@
     "ergotPrevYearsAggQuery = sq.text(\"\"\"\n",
     "    SELECT year, district, \n",
     "    present_prev1, present_prev2, present_prev3,\n",
-    "    severity_prev1, severity_prev2, severity_prev3,\n",
     "    percnt_true_prev1, percnt_true_prev2, percnt_true_prev3 \n",
     "    from agg_ergot_sample_v2\n",
     "\"\"\")\n",
@@ -90,7 +89,8 @@
    "source": [
     "conn = getConn(\"./.env\")\n",
     "\n",
-    "satelliteDf = pd.read_sql(weatherSatQuery, conn)\n",
+    "stationDf = pd.read_sql(weatherStationQuery, conn)\n",
+    "# satelliteDf = pd.read_sql(weatherSatQuery, conn)\n",
     "ergotPrevDf = pd.read_sql(ergotPrevYearsAggQuery, conn)\n",
     "ergotTargetDf = pd.read_sql(ergotTargetQuery, conn)\n",
     "\n",
@@ -108,13 +108,21 @@
     "# tempdf = pd.merge(satelliteDf, ergotPrevDf, on=[\"year\", \"district\"], how=\"left\")\n",
     "# del satelliteDf\n",
     "# del ergotPrevDf\n",
-    "tempdf = satelliteDf\n",
+    "# tempdf = satelliteDf\n",
+    "tempdf = stationDf\n",
     "\n",
     "# merge on year and district\n",
     "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
     "del ergotTargetDf\n",
     "del tempdf"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -263,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ESTIMATORS = 200\n",
+    "ESTIMATORS = 400\n",
     "DEPTH = 40\n",
     "CORES = -1\n",
     "MINSPLSPLIT = 8\n",
