--- a/src/importSoil/soilVisualization.ipynb
+++ b/src/importSoil/soilVisualization.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# soilVisualization.ipynb\n",
+    "\n",
+    "After [aggregating the soil data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/importSoil/soilaggregation.ipynb) and [aggregating the ergot data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/Ergot/aggregateErgot.ipynb) the following script can be used to visualize the data\n",
+    "\n",
+    "##### Output graphs:\n",
+    "- Correlation plot\n",
+    "- Pair plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,12 +37,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
+    "SOIL_TABLE = \"agg_soil_data\" # name of the table we'd like to pull the soil data from\n",
+    "ERGOT_TABLE = \"agg_ergot_sample\" # name of the table we'd like to pull the ergot data from\n",
+    "\n",
+    "\n",
+    "# Load the database connection environment variables located in the docker folder\n",
+    "load_dotenv(\"../docker/.env\")\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
     "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
     "PG_PW = os.getenv(\"POSTGRES_PW\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Self contained data retrieval for the soil/ergot visualization\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Load the environment database variables\n",
+    "- Connect to the database\n",
+    "- Create the soil data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
+    "- Create the ergot data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- Close the database connection"
    ]
   },
   {
@@ -48,33 +83,34 @@
     "    raise ValueError(\"Environment variables not set\")\n",
     "\n",
     "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
-    "conn = db.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soilQuery = sq.text(\n",
-    "    \"\"\"\n",
-    "    SELECT * FROM public.agg_soil_data;\n",
-    "    \"\"\"\n",
-    ")\n",
+    "conn = db.connect()\n",
     "\n",
-    "soilDf = pd.read_sql_query(soilQuery, conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ergotQuery = sq.text(\"SELECT * FROM public.agg_ergot_samples\")\n",
+    "# Pull the soil data\n",
+    "soilQuery = sq.text(f\"SELECT * FROM public.{SOIL_TABLE};\")\n",
+    "soilDf = pd.read_sql_query(soilQuery, conn)\n",
     "\n",
-    "ergotDF = pd.read_sql_query(ergotQuery, conn)"
+    "# Pull the ergot data\n",
+    "ergotQuery = sq.text(f\"SELECT * FROM public.{ERGOT_TABLE}\")\n",
+    "ergotDF = pd.read_sql_query(ergotQuery, conn)\n",
+    "\n",
+    "db.cleanup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Merge the soil \n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Load the environment database variables\n",
+    "- Connect to the database\n",
+    "- Create the soil data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
+    "- Create the ergot data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- Close the database connection"
    ]
   },
   {
@@ -83,25 +119,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = soilDf.merge(ergotDF, on=[\"district\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "final_df = soilDf.merge(ergotDF, on=[\"district\"])\n",
     "final_df.drop(columns=[\"district\", \"year\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Self contained data retrieval for the soil/ergot visualization\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Load the environment database variables\n",
+    "- Connect to the database\n",
+    "- Create the soil data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
+    "- Create the ergot data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- Close the database connection"
    ]
   },
   {
@@ -114,12 +150,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "corr"
+    "Purpose:  \n",
+    "Self contained data retrieval for the soil/ergot visualization\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Load the environment database variables\n",
+    "- Connect to the database\n",
+    "- Create the soil data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
+    "- Create the ergot data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- Close the database connection"
    ]
   },
   {
@@ -154,34 +198,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Self contained data retrieval for the soil/ergot visualization\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Load the environment database variables\n",
+    "- Connect to the database\n",
+    "- Create the soil data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
+    "- Create the ergot data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- Close the database connection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "sns.pairplot(final_df[[\"has_ergot\", \"sum_severity\", \"avg_calcium_ph\", \"avg_proj_ph\"]])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.show()\n",
+    "\n",
     "sns.pairplot(\n",
     "    final_df[[\"has_ergot\", \"sum_severity\", \"avg_total_sand\", \"avg_water_reten_10\"]]\n",
     ")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.cleanup()"
    ]
   }
  ],
