--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# soilAggregation.ipynb\n",
+    "\n",
+    "After [loading the soil data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/importSoil/importSoil.ipynb) and [agriculture regions data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/WeatherStation/Data_step%20csv%20import%20geo%20boundaries%20stations.ipynb) the following can be used to aggregate the soil data per district\n",
+    "\n",
+    "##### Output table:\n",
+    "- [agg_soil_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#agg_soil_data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -22,7 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TABLENAME = \"agg_soil_data\"  # name of the table we are currently creating (will hold the aggregated data)\n",
+    "# name of the table we are creating to hold the aggregated data\n",
+    "TABLENAME = (\n",
+    "    \"agg_soil_data\"\n",
+    ")\n",
     "\n",
     "# name of the table that holds soil geometries/borders\n",
     "SOIL_GEOM_TABLE = \"soil_geometry\"\n",
@@ -33,6 +48,7 @@
     "\n",
     "# name of the table that holds the agriculture regions\n",
     "AG_REGIONS_TABLE = \"census_ag_regions\"\n",
+    "\n",
     "\n",
     "# Load the database connection environment variables located in the docker folder\n",
     "load_dotenv(\"../docker/.env\")\n",
@@ -69,7 +85,7 @@
     "    soil_geometry = pullSoilGeometry(conn)\n",
     "\n",
     "    # Merge data and perform the aggregation per district (vairables remain constant over time)\n",
-    "    merge_df = getMergedf(soil_data, surronding_soil, soil_components, soil_geometry)\n",
+    "    merge_df = getMergedDF(soil_data, surronding_soil, soil_components, soil_geometry)\n",
     "\n",
     "    # Add the resulting table to database, commit it then close the connection\n",
     "    merge_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"replace\", index=False)\n",
@@ -203,21 +219,21 @@
     "Psuedocode:\n",
     "- Create the agriculture region SQL query\n",
     "- [Load the data from the database directly into a DataFrame](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.from_postgis.html)\n",
-    "    - **crs** specifies the coordinate system which in our case we are using EPSG:3347\n",
-    "    - **geom_col** speicifies the name of the columns we expect to find the geometry/borders within\n",
+    "    - crs specifies the coordinate system which in our case we are using EPSG:3347\n",
+    "    - geom_col specifies the name of the columns we expect to find the geometry/borders within\n",
     "\n",
     "<br>\n",
     "\n",
     "- Create the soil geometry SQL query\n",
     "- [Load the data from the database directly into a DataFrame](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.from_postgis.html)\n",
-    "    - **crs** specifies the coordinate system which in our case we are using EPSG:3347\n",
-    "    - **geom_col** speicifies the name of the columns we expect to find the geometry/borders within\n",
+    "    - crs specifies the coordinate system which in our case we are using EPSG:3347\n",
+    "    - geom_col specifies the name of the columns we expect to find the geometry/borders within\n",
     "\n",
     "<br>\n",
     "\n",
     "- Join the soil geometry geodataframe and the regions geodataframe\n",
-    "    - **predicate=intersects** specifies that the regions should be joined *depending on which geometries fall into what regions*\n",
-    "    - **how=inner** specifies that all non intersecting points should be removed\n",
+    "    - *predicate=intersects* specifies that the regions should be joined *depending on which geometries fall into what regions*\n",
+    "    - *how=inner* specifies that all non intersecting points should be removed\n",
     "- Delete index_right (created during the join) and geomtetry and return the results as a DataFrame (without geometry)"
    ]
   },
@@ -282,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getMergedf(\n",
+    "def getMergedDF(\n",
     "    soil_data: pd.DataFrame,\n",
     "    surronding_soil: pd.DataFrame,\n",
     "    soil_components: pd.DataFrame,\n",
