added soil documentation

--- a/src/importSoil/soilVisualization.ipynb
+++ b/src/importSoil/soilVisualization.ipynb
@@ -9,7 +9,7 @@
     "After [aggregating the soil data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/importSoil/soilaggregation.ipynb) and [aggregating the ergot data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/Ergot/aggregateErgot.ipynb) the following script can be used to visualize the data\n",
     "\n",
     "##### Output graphs:\n",
-    "- Correlation plot\n",
+    "- Correlation plot ([such as ...](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/.github/img/soilCorrelation.png))\n",
     "- Pair plots"
    ]
   },
@@ -37,8 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SOIL_TABLE = \"agg_soil_data\" # name of the table we'd like to pull the soil data from\n",
-    "ERGOT_TABLE = \"agg_ergot_sample\" # name of the table we'd like to pull the ergot data from\n",
+    "SOIL_TABLE = \"agg_soil_data\"  # name of the table we'd like to pull the soil data from\n",
+    "\n",
+    "# name of the table we'd like to pull the ergot data from\n",
+    "ERGOT_TABLE = (\n",
+    "    \"agg_ergot_sample\"  \n",
+    ")\n",
     "\n",
     "\n",
     "# Load the database connection environment variables located in the docker folder\n",
@@ -101,16 +105,11 @@
    "metadata": {},
    "source": [
     "Purpose:  \n",
-    "Merge the soil \n",
+    "Merge the soil and drop irrelevant columns\n",
     "\n",
     "Psuedocode:  \n",
-    "- Load the environment database variables\n",
-    "- Connect to the database\n",
-    "- Create the soil data SQL query\n",
-    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
-    "- Create the ergot data SQL query\n",
-    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "- Close the database connection"
+    "- [Merge the soil data and ergot data](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.merge.html) on their district values\n",
+    "- Drop irrelevant attributes "
    ]
   },
   {
@@ -128,16 +127,10 @@
    "metadata": {},
    "source": [
     "Purpose:  \n",
-    "Self contained data retrieval for the soil/ergot visualization\n",
+    "Create the correlation matrix between attributes\n",
     "\n",
     "Psuedocode:  \n",
-    "- Load the environment database variables\n",
-    "- Connect to the database\n",
-    "- Create the soil data SQL query\n",
-    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
-    "- Create the ergot data SQL query\n",
-    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "- Close the database connection"
+    "- [Create the correlation matrix between attributes](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.corr.html)"
    ]
   },
   {
@@ -154,16 +147,9 @@
    "metadata": {},
    "source": [
     "Purpose:  \n",
-    "Self contained data retrieval for the soil/ergot visualization\n",
+    "Create a correlation plot between soil and ergot\n",
     "\n",
-    "Psuedocode:  \n",
-    "- Load the environment database variables\n",
-    "- Connect to the database\n",
-    "- Create the soil data SQL query\n",
-    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
-    "- Create the ergot data SQL query\n",
-    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "- Close the database connection"
+    "Note: this code is boilerplate, therefore additional information can be found [here](https://seaborn.pydata.org/examples/many_pairwise_correlations.html)"
    ]
   },
   {
@@ -202,16 +188,11 @@
    "metadata": {},
    "source": [
     "Purpose:  \n",
-    "Self contained data retrieval for the soil/ergot visualization\n",
+    "Create pairplots between the more interesting relationships between soil and ergot\n",
     "\n",
     "Psuedocode:  \n",
-    "- Load the environment database variables\n",
-    "- Connect to the database\n",
-    "- Create the soil data SQL query\n",
-    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
-    "- Create the ergot data SQL query\n",
-    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "- Close the database connection"
+    "- [Create the pairplots](https://seaborn.pydata.org/generated/seaborn.pairplot.html) (attributes of interest are selected from the DataFrame as a list)\n",
+    "- [Generate the pairplots](https://seaborn.pydata.org/generated/seaborn.objects.Plot.show.html)"
    ]
   },
   {
