--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -35,9 +35,7 @@
    "outputs": [],
    "source": [
     "# name of the table we are creating to hold the aggregated data\n",
-    "TABLENAME = (\n",
-    "    \"agg_soil_data\"\n",
-    ")\n",
+    "TABLENAME = \"agg_soil_data\"\n",
     "\n",
     "# name of the table that holds soil geometries/borders\n",
     "SOIL_GEOM_TABLE = \"soil_geometry\"\n",
@@ -103,7 +101,7 @@
     "Psuedocode:\n",
     "- Create the soil data SQL query\n",
     "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "- Drop all irrelevant attributes (the attributes we are interested in keeping are provided as a list)\n",
+    "- Drop irrelevant attributes (the attributes we are interested in keeping are provided as a list)\n",
     "- [Rename id to soil_id](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rename.html)\n",
     "\n",
     "Note: \n",
@@ -157,7 +155,7 @@
     "Psuedocode:\n",
     "- Create the surronding soil SQL query\n",
     "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "- Drop all irrelevant attributes (the attributes we are interested in keeping are provided as a list)"
+    "- Drop irrelevant attributes (the attributes we are interested in keeping are provided as a list)"
    ]
   },
   {
@@ -184,7 +182,7 @@
     "Psuedocode:\n",
     "- Create the soil component SQL query\n",
     "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "- Drop all irrelevant attributes (the attributes we are interested in keeping are provided as a list)"
+    "- Drop irrelevant attributes (the attributes we are interested in keeping are provided as a list)"
    ]
   },
   {
