--- a/src/Soil/soilVisualization.ipynb
+++ b/src/Soil/soilVisualization.ipynb
@@ -40,9 +40,7 @@
     "SOIL_TABLE = \"agg_soil_data\"  # name of the table we'd like to pull the soil data from\n",
     "\n",
     "# name of the table we'd like to pull the ergot data from\n",
-    "ERGOT_TABLE = (\n",
-    "    \"agg_ergot_sample\"  \n",
-    ")\n",
+    "ERGOT_TABLE = \"agg_ergot_sample\"\n",
     "\n",
     "\n",
     "# Load the database connection environment variables located in the docker folder\n",
