--- a/src/Models/Forest.ipynb
+++ b/src/Models/Forest.ipynb
@@ -648,9 +648,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downgrade\n",
+      "False    114833\n",
+      "True      19921\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# post balancing check\n",
     "# print value counts downgrade\n",
@@ -675,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,9 +796,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/imblearn/ensemble/_forest.py:546: FutureWarning: The default of `sampling_strategy` will change from `'auto'` to `'all'` in version 0.13. This change will follow the implementation proposed in the original paper. Set to `'all'` to silence this warning and adopt the future behaviour.\n",
+      "  warn(\n",
+      "/usr/local/lib/python3.8/dist-packages/imblearn/ensemble/_forest.py:558: FutureWarning: The default of `replacement` will change from `False` to `True` in version 0.13. This change will follow the implementation proposed in the original paper. Set to `True` to silence this warning and adopt the future behaviour.\n",
+      "  warn(\n",
+      "/usr/local/lib/python3.8/dist-packages/imblearn/ensemble/_forest.py:546: FutureWarning: The default of `sampling_strategy` will change from `'auto'` to `'all'` in version 0.13. This change will follow the implementation proposed in the original paper. Set to `'all'` to silence this warning and adopt the future behaviour.\n",
+      "  warn(\n",
+      "/usr/local/lib/python3.8/dist-packages/imblearn/ensemble/_forest.py:558: FutureWarning: The default of `replacement` will change from `False` to `True` in version 0.13. This change will follow the implementation proposed in the original paper. Set to `True` to silence this warning and adopt the future behaviour.\n",
+      "  warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>XGBRFClassifier(base_score=None, booster=None, callbacks=None,\n",
+       "                colsample_bylevel=None, colsample_bytree=None,\n",
+       "                early_stopping_rounds=None, enable_categorical=False,\n",
+       "                eval_metric=None, feature_types=None, gamma=None, gpu_id=None,\n",
+       "                grow_policy=None, importance_type=None,\n",
+       "                interaction_constraints=None, max_bin=None,\n",
+       "                max_cat_threshold=None, max_cat_to_onehot=None,\n",
+       "                max_delta_step=None, max_depth=40, max_leaves=None,\n",
+       "                min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+       "                n_estimators=400, n_jobs=-1, num_parallel_tree=None,\n",
+       "                objective=&#x27;binary:logistic&#x27;, predictor=None, random_state=42,\n",
+       "                reg_alpha=None, ...)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">XGBRFClassifier</label><div class=\"sk-toggleable__content\"><pre>XGBRFClassifier(base_score=None, booster=None, callbacks=None,\n",
+       "                colsample_bylevel=None, colsample_bytree=None,\n",
+       "                early_stopping_rounds=None, enable_categorical=False,\n",
+       "                eval_metric=None, feature_types=None, gamma=None, gpu_id=None,\n",
+       "                grow_policy=None, importance_type=None,\n",
+       "                interaction_constraints=None, max_bin=None,\n",
+       "                max_cat_threshold=None, max_cat_to_onehot=None,\n",
+       "                max_delta_step=None, max_depth=40, max_leaves=None,\n",
+       "                min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+       "                n_estimators=400, n_jobs=-1, num_parallel_tree=None,\n",
+       "                objective=&#x27;binary:logistic&#x27;, predictor=None, random_state=42,\n",
+       "                reg_alpha=None, ...)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "XGBRFClassifier(base_score=None, booster=None, callbacks=None,\n",
+       "                colsample_bylevel=None, colsample_bytree=None,\n",
+       "                early_stopping_rounds=None, enable_categorical=False,\n",
+       "                eval_metric=None, feature_types=None, gamma=None, gpu_id=None,\n",
+       "                grow_policy=None, importance_type=None,\n",
+       "                interaction_constraints=None, max_bin=None,\n",
+       "                max_cat_threshold=None, max_cat_to_onehot=None,\n",
+       "                max_delta_step=None, max_depth=40, max_leaves=None,\n",
+       "                min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+       "                n_estimators=400, n_jobs=-1, num_parallel_tree=None,\n",
+       "                objective='binary:logistic', predictor=None, random_state=42,\n",
+       "                reg_alpha=None, ...)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_nobalance_rf.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
     "model_rf.fit(balancedTrainDfX, balancedTrainDfY)\n",
@@ -807,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,9 +905,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True     22492\n",
+      "False     4831\n",
+      "Name: count, dtype: int64\n",
+      "False    27323\n",
+      "Name: count, dtype: int64\n",
+      "False    20698\n",
+      "True      6625\n",
+      "Name: count, dtype: int64\n",
+      "False    16193\n",
+      "True     11130\n",
+      "Name: count, dtype: int64\n",
+      "0    27323\n",
+      "Name: count, dtype: int64\n",
+      "0    14397\n",
+      "1    12926\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "print(pd.DataFrame(predictions).value_counts())\n",
     "print(pd.DataFrame(predictions_nobalance).value_counts())\n",
@@ -855,9 +950,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sk RF balanced train set\n",
+      "Accuracy:  0.19935585404238187\n",
+      "Precision:  0.03627956606793527\n",
+      "Recall:  0.8031496062992126\n",
+      "F1:  0.0694231750893313\n",
+      "ROC AUC:  0.4895932012945867\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.96      0.18      0.30     26307\n",
+      "        True       0.04      0.80      0.07      1016\n",
+      "\n",
+      "    accuracy                           0.20     27323\n",
+      "   macro avg       0.50      0.49      0.18     27323\n",
+      "weighted avg       0.92      0.20      0.29     27323\n",
+      "\n",
+      "\n",
+      "sk RF imbalanced train set\n",
+      "Accuracy:  0.9628152106284082\n",
+      "Precision:  0.0\n",
+      "Recall:  0.0\n",
+      "F1:  0.0\n",
+      "ROC AUC:  0.5\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.96      1.00      0.98     26307\n",
+      "        True       0.00      0.00      0.00      1016\n",
+      "\n",
+      "    accuracy                           0.96     27323\n",
+      "   macro avg       0.48      0.50      0.49     27323\n",
+      "weighted avg       0.93      0.96      0.94     27323\n",
+      "\n",
+      "\n",
+      "imb RF imbalanced train set\n",
+      "Accuracy:  0.7586282619038905\n",
+      "Precision:  0.0789433962264151\n",
+      "Recall:  0.514763779527559\n",
+      "F1:  0.13689307682240545\n",
+      "ROC AUC:  0.6414051535338787\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.98      0.77      0.86     26307\n",
+      "        True       0.08      0.51      0.14      1016\n",
+      "\n",
+      "    accuracy                           0.76     27323\n",
+      "   macro avg       0.53      0.64      0.50     27323\n",
+      "weighted avg       0.94      0.76      0.83     27323\n",
+      "\n",
+      "\n",
+      "imb RF balanced train set\n",
+      "Accuracy:  0.5854042381876076\n",
+      "Precision:  0.03674752920035939\n",
+      "Recall:  0.40255905511811024\n",
+      "F1:  0.06734727482298698\n",
+      "ROC AUC:  0.49751246936161714\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.96      0.59      0.73     26307\n",
+      "        True       0.04      0.40      0.07      1016\n",
+      "\n",
+      "    accuracy                           0.59     27323\n",
+      "   macro avg       0.50      0.50      0.40     27323\n",
+      "weighted avg       0.93      0.59      0.71     27323\n",
+      "\n",
+      "\n",
+      "xgb RF imbalanced train set\n",
+      "Accuracy:  0.9628152106284082\n",
+      "Precision:  0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n",
+      "F1:  0.0\n",
+      "ROC AUC:  0.5\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.96      1.00      0.98     26307\n",
+      "        True       0.00      0.00      0.00      1016\n",
+      "\n",
+      "    accuracy                           0.96     27323\n",
+      "   macro avg       0.48      0.50      0.49     27323\n",
+      "weighted avg       0.93      0.96      0.94     27323\n",
+      "\n",
+      "\n",
+      "xgb RF balanced train set\n",
+      "Accuracy:  0.5302126413644183\n",
+      "Precision:  0.04278198978802414\n",
+      "Recall:  0.5442913385826772\n",
+      "F1:  0.0793286472529049\n",
+      "ROC AUC:  0.536980123999211\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.97      0.53      0.68     26307\n",
+      "        True       0.04      0.54      0.08      1016\n",
+      "\n",
+      "    accuracy                           0.53     27323\n",
+      "   macro avg       0.51      0.54      0.38     27323\n",
+      "weighted avg       0.93      0.53      0.66     27323\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "printMetrics(\"sk RF balanced train set\", testDf[\"downgrade\"], predictions)\n",
